tests/ui/type-alias-impl-trait/structural-match.stderr
error: `foo::Foo` cannot be used in patterns
  --> $DIR/structural-match.rs:18:9
   |
LL | const VALUE: Foo = value();
   | ---------------- constant defined here
...
LL |         VALUE => (),
   |         ^^^^^

error: aborting due to 1 previous error

